# Better-Logge

cmake/: CMakeLists.txt
header/: betterLogger.hpp  concepts.hpp  defaultLogStacks.hpp  defaultLoggers.hpp  formats.hpp  helpers.hpp  includes.hpp  logStacks.hpp  loggers.hpp
include/: constants.hpp  defaultLoggers.hpp  helpers.hpp  loggers.hpp
include/better/: logger.hpp
include/betterLogger/: includes.hpp  namespaces.hpp
lib_include/better/: logger.hpp
source/: defaultLogStacks.hpp  defaultLoggers.hpp  helpers.hpp  logStacks.hpp  loggers.hpp  src_helpers.hpp  src_loggers.hpp
tester/: tester.cpp
